fix bookmark style Dark mode

--- a/src/styles/notion-block.module.scss
+++ b/src/styles/notion-block.module.scss
@@ -240,7 +240,7 @@
         padding: 12px 14px 14px;
         overflow: hidden;
         text-align: left;
-        color: var(--fg);
+        // color: var(--fg);
 
         >div {
           &:first-child {
